# dashboard-client

./: README.md  pyproject.toml  requirements.txt
aoe2dashboard/: __init__.py  __main__.py  client.py  packets.py
events/0/: 0-1.json
events/1/: 1-1.json  1-2.json  1-3.json
events/10/: 10-1.json  10-2.json  10-3.json
events/11/: 11-1.json
events/12/: 12-1.json
events/15/: 15-1.json
events/16/: 16-1.json
events/2/: 2-1.json  2-2.json  2-3.json  2-4.json  2-5.json  2-6.json
events/21/: 21-1.json  21-2.json  21-3.json
events/23/: 23-1.json
events/24/: 24-1.json  24-3.json
events/3/: 3-1.json  3-3.json  3-4.json  3-5.json
events/4/: 4-1.json  4-2.json  4-3.json
events/5/: 5-1.json
events/6/: 6-1.json  6-2.json
events/7/: 7-1.json
events/9/: 9-1.json
